<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LFeedback"
    style="@style/MainWindowArrangement"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center"
    android:alpha="0"
    android:background="@drawable/bg_menu_white"
    android:clickable="true"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:text="@string/w_main_feedback_title"
        android:textColor="@color/bgSettings"
        android:textSize="29sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/w_main_feedback_text"
        android:textColor="@color/VeryDarkGray" />

    <Button
        android:id="@+id/BFeedbackYes"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="16dp"
        android:paddingTop="12dp"
        android:paddingRight="16dp"
        android:paddingBottom="12dp"
        android:text="@string/w_main_feedback_yes"
        android:textAllCaps="false"
        android:textSize="17sp" />

    <Button
        android:id="@+id/BFeedbackDone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="16dp"
        android:paddingTop="12dp"
        android:paddingRight="16dp"
        android:paddingBottom="12dp"
        android:text="@string/w_main_feedback_done"
        android:textAllCaps="false"
        android:textSize="17sp" />

    <Button
        android:id="@+id/BFeedbackNo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="20dp"
        android:paddingLeft="16dp"
        android:paddingTop="12dp"
        android:paddingRight="16dp"
        android:paddingBottom="12dp"
        android:text="@string/w_main_feedback_no"
        android:textAllCaps="false"
        android:textSize="17sp" />

</LinearLayout>